app/components/articleSearch/components/searchItem/abstract.scss
@import "../../../../variables";

.abstract {
  margin-top: 8px;
  font-size: 13.5px;
  line-height: 1.5;
  color: $dark_navy2;
  white-space: pre-line;
  word-break: break-word;

  .searchQuery {
    font-weight: 900;
  }

  .firstParagraph {
    display: block;
  }

  .restParagraph {
    display: block;
    overflow: hidden;
    transition: max-height 0.5s cubic-bezier(0.4, 0, 0.2, 1);
    margin-top: -18px;
    margin-bottom: 18px;

    &.isOpen {
      margin-bottom: 0px;
    }
  }

  .abstractToggleButton {
    font-size: 13.5px;
    line-height: 1.85;
    color: $royal_blue1;
    cursor: pointer;
  }
}

// Mobile
@media (max-width: $mobile-width) {
  .abstract {
    margin-top: 10px;
    font-size: 13px;
    max-height: 138px;
    overflow: hidden;
  }
}

